--- a/docs/src/content/docs/features/plugins.mdx
+++ b/docs/src/content/docs/features/plugins.mdx
@@ -3,14 +3,13 @@ title: plugins
 description: adding extra features with plugins.
 ---
 
+import InlineSVG from "@/components/InlineSVG.astro";
+
 there are a couple plugins to improve rovr's functionality. enable and configure them in your `config.toml` file.
 
 ### zoxide
 
-<img
-  src="/rovr/screenshots/plugin-zoxide.svg"
-  alt="rovr's zoxide integration"
-/>
+<InlineSVG src="/rovr/screenshots/plugin-zoxide.svg" alt="rovr's zoxide integration" />
 
 [zoxide](https://github.com/ajeetdsouza/zoxide) allows you to zip around your filesystem, and can be integrated into rovr
 
@@ -39,7 +38,7 @@ opens files and folders in your preferred editor.
 
 ### fd
 
-<img src="/rovr/screenshots/plugins-fd.svg" alt="rovr's fd integration" />
+<InlineSVG src="/rovr/screenshots/plugins-fd.svg" alt="rovr's fd integration" />
 
 uses [fd](https://github.com/sharkdp/fd) to search recursively in the current directory
 
