--- a/docs/src/content/docs/guides/file-operations.mdx
+++ b/docs/src/content/docs/guides/file-operations.mdx
@@ -3,6 +3,8 @@ title: file operations
 description: how to manage files and folders in rovr.
 ---
 
+import InlineSVG from "@/components/InlineSVG.astro";
+
 ### clipboard actions
 
 - copy to clipboard: `y` or `ctrl+c`
@@ -22,7 +24,7 @@ description: how to manage files and folders in rovr.
 
 ### visual/select mode
 
-![select/visual mode](/rovr/screenshots/select-mode.svg)
+<InlineSVG src="/rovr/screenshots/select-mode.svg" alt="select/visual mode" />
 
 the main file list supports a multi-selection mode, sort of like vi's visual mode.
 
@@ -39,7 +41,7 @@ once in visual mode, you can select multiple files:
 
 ### mouse interactions
 
-![a mini popup from right-clicking an object](/rovr/screenshots/right-click.svg)
+<InlineSVG src="/rovr/screenshots/right-click.svg" alt="a mini popup from right-clicking an object" />
 
 rovr supports mouse interactions for enhanced usability:
 
