--- a/docs/src/content/docs/guides/user-interface.mdx
+++ b/docs/src/content/docs/guides/user-interface.mdx
@@ -3,7 +3,9 @@ title: user interface
 description: an overview of the rovr user interface and how to navigate it.
 ---
 
-![main interface](/rovr/screenshots/main.svg)
+import InlineSVG from "@/components/InlineSVG.astro";
+
+<InlineSVG src="/rovr/screenshots/main.svg" alt="main interface" />
 
 rovr's user interface has several panels that you can navigate between using the keyboard.
 
@@ -34,9 +36,9 @@ you can show or hide panels to customize your view:
 rovr supports compact mode options for smaller terminal windows or when you want to maximize the file list space. compact mode has two separate options that can be enabled independently:
 
 - **buttons**: compacts the action buttons and path input to one line instead of three
-![compact buttons enabled](/rovr/screenshots/compact_buttons.svg)
+  <InlineSVG src="/rovr/screenshots/compact_buttons.svg" alt="compact buttons enabled" />
 - **panels**: makes the footer panels smaller to give more room for the file list
-![compact panels enabled](/rovr/screenshots/compact_panels.svg)
+  <InlineSVG src="/rovr/screenshots/compact_panels.svg" alt="compact panels enabled" />
 
 To enable compact mode options, set the following in your `config.toml`:
 
@@ -46,12 +48,11 @@ buttons = true  # compact buttons and path input
 panels = true   # make panels smaller
 ```
 
-
 You can enable either or both options depending on your preferences and terminal size.
 
 ### tabs
 
-![multiple tabs](/rovr/screenshots/tabs.svg)
+<InlineSVG src="/rovr/screenshots/tabs.svg" alt="multiple tabs" />
 
 rovr supports tabs to manage multiple file list views simultaneously.
 
@@ -62,6 +63,6 @@ rovr supports tabs to manage multiple file list views simultaneously.
 
 ### help and shortcuts
 
-![keybind list](/rovr/screenshots/keybind-list.svg)
+<InlineSVG src="/rovr/screenshots/keybind-list.svg" alt="keybind list" />
 
 - view all available keybindings: `?` - this opens a help screen showing all available shortcuts and their functions
