--- a/docs/src/content/docs/features/sorting.mdx
+++ b/docs/src/content/docs/features/sorting.mdx
@@ -3,15 +3,18 @@ title: sorting files
 description: how to sort files and folders in rovr.
 ---
 
-![sort options](/rovr/screenshots/sort-order.svg)
+import InlineSVG from "@/components/InlineSVG.astro";
+
+<InlineSVG src="/rovr/screenshots/sort-order.svg" alt="sort options" />
 
 rovr provides multiple ways to sort files and folders in the file list, allowing you to organize your view based on different criteria.
 
 ## accessing the sort menu
 
 You can access the sort menu by:
+
 - clicking the sort button in the action button menu
-![sort order button](/rovr/screenshots/sort-order-button.svg)
+  <InlineSVG src="/rovr/screenshots/sort-order-button.svg" alt="sort order button" />
 - pressing `,` to open the menu
 
 ## sort criteria
@@ -20,7 +23,7 @@ rovr supports the following sort options:
 
 ### sort by name
 
-![sort by name](/rovr/screenshots/sortby-name.svg)
+<InlineSVG src="/rovr/screenshots/sortby-name.svg" alt="sort by name" />
 
 Sorts files alphabetically by their name. This is the default sorting method.
 
@@ -29,7 +32,7 @@ Sorts files alphabetically by their name. This is the default sorting method.
 
 ### sort by extension
 
-![sort by extension](/rovr/screenshots/sortby-extension.svg)
+<InlineSVG src="/rovr/screenshots/sortby-extension.svg" alt="sort by extension" />
 
 Groups files by their file extension, making it easy to find files of the same type together.
 
@@ -38,7 +41,7 @@ Groups files by their file extension, making it easy to find files of the same t
 
 ### sort by natural order
 
-![sort by natural](/rovr/screenshots/sortby-natural.svg)
+<InlineSVG src="/rovr/screenshots/sortby-natural.svg" alt="sort by natural" />
 
 Uses natural sorting, which handles numbers in file names more intuitively (e.g., "file2" comes before "file10").
 
@@ -47,7 +50,7 @@ Uses natural sorting, which handles numbers in file names more intuitively (e.g.
 
 ### sort by size
 
-![sort by size](/rovr/screenshots/sortby-size.svg)
+<InlineSVG src="/rovr/screenshots/sortby-size.svg" alt="sort by size" />
 
 Sorts files by their size, useful for finding large or small files quickly.
 
@@ -56,7 +59,7 @@ Sorts files by their size, useful for finding large or small files quickly.
 
 ### sort by created time
 
-![sort by creation](/rovr/screenshots/sortby-creation.svg)
+<InlineSVG src="/rovr/screenshots/sortby-creation.svg" alt="sort by creation" />
 
 Sorts files by their creation time.
 
@@ -65,7 +68,7 @@ Sorts files by their creation time.
 
 ### sort by modified time
 
-![sort by modified](/rovr/screenshots/sortby-modified.svg)
+<InlineSVG src="/rovr/screenshots/sortby-modified.svg" alt="sort by modified" />
 
 Sorts files by their last modification time.
 
@@ -75,6 +78,7 @@ Sorts files by their last modification time.
 ## toggling sort direction
 
 You can toggle between ascending and descending order:
+
 - **keybinding**: `d` (when sort menu is open)
 - this switches the current sort order between ascending and descending
 
@@ -83,5 +87,6 @@ The sort menu dynamically updates to show the current direction for each sort op
 ## persistence
 
 Your sort preferences are automatically saved and persist between sessions. When you close and reopen rovr, it will remember:
+
 - your selected sort criteria (name, size, extension, etc.)
 - your sort direction (ascending or descending)
