--- a/docs/src/content/docs/overview.mdx
+++ b/docs/src/content/docs/overview.mdx
@@ -3,10 +3,9 @@ title: welcome to rovr
 description: overview on rovr with latest features
 ---
 
-<img
-  src="/rovr/screenshots/main.svg"
-  alt="normal user interface"
-/>
+import InlineSVG from "@/components/InlineSVG.astro";
+
+<InlineSVG src="/rovr/screenshots/main.svg" alt="normal user interface" />
 
 let's use the [5W1H framework](https://en.wikipedia.org/wiki/Five_Ws) to describe rovr and its latest improvements
 
@@ -17,20 +16,26 @@ a modern answer to a terminal file explorer, that can be customized to fit your 
 ### recent major improvements
 
 #### state manager
+
 rovr now includes a comprehensive state management system that automatically saves and restores your preferences:
+
 - panel visibility settings persist between sessions
 - sort criteria and direction preferences are remembered
 - seamless integration with compact mode settings
 - automatic version tracking for compatibility
 
 #### enhanced sorting
+
 the new sort order switcher provides quick access to sorting options:
+
 - cycle through different sort orders without opening menus
 - visual feedback with icons showing current sort type and direction
 - all sort preferences are automatically saved via the state manager
 
 #### flexible compact modes
+
 compact mode has been expanded into granular options:
+
 - **header compact mode**: reduces header height for more vertical space
 - **footer compact mode**: auto-hides footer panels when not in use
 - **legacy compact mode**: maintains backward compatibility
