--- a/docs/src/content/docs/reference/keybindings.mdx
+++ b/docs/src/content/docs/reference/keybindings.mdx
@@ -21,7 +21,7 @@ this page provides a comprehensive list of the default keybindings in `rovr`. yo
 | focus_toggle_processes       | <kbd>#</kbd>                                   | Focus processes        |
 | focus_toggle_clipboard       | <kbd>c</kbd>                                   | Focus clipboard        |
 | focus_toggle_metadata        | <kbd>m</kbd>                                   | Focus metadata         |
-| focus_search                 | <kbd>ctrl+f</kbd> <kbd>slash</kbd>             | Search                 |
+| focus_search                 | <kbd>slash</kbd>                               | Search                 |
 | copy                         | <kbd>y</kbd> <kbd>ctrl+c</kbd>                 | Copy                   |
 | paste                        | <kbd>p</kbd> <kbd>ctrl+v</kbd>                 | Paste                  |
 | cut                          | <kbd>x</kbd> <kbd>ctrl+x</kbd>                 | Cut                    |
@@ -64,6 +64,8 @@ this page provides a comprehensive list of the default keybindings in `rovr`. yo
 | suspend_app                  | <kbd>ctrl+z</kbd>                              | Suspend app            |
 
 ## alternate layers
+
+keybinds related to the alternate screens and popups in rovr.
 
 ### `change_sort_order`
 
