--- a/docs/src/content/docs/reference/schema.mdx
+++ b/docs/src/content/docs/reference/schema.mdx
@@ -4015,10 +4015,10 @@ Must be one of:
 | **Required**              | No          |
 | **Additional properties** | Not allowed |
 
-| Property                                   | Type    | Title/Description                                                                                                                                                                  |
-| ------------------------------------------ | ------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| [enabled](#plugins_file_one_enabled)       | boolean | Enable file(1) MIME type detection for preview selection. When enabled, rovr uses the \`file\` command to detect file types instead of relying solely on file extensions.          |
-| [mime_rules](#plugins_file_one_mime_rules) | object  | Map MIME type patterns to preview types. Supports glob patterns (e.g., 'text/\*' matches 'text/plain', 'text/html', etc.). Valid preview types: text, image, pdf, archive, folder. |
+| Property                                   | Type    | Title/Description                                                                                                                                                                                                                                                       |
+| ------------------------------------------ | ------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| [enabled](#plugins_file_one_enabled)       | boolean | Enable file(1) MIME type detection for preview selection. When enabled, rovr uses the \`file\` command to detect file types instead of relying solely on file extensions.                                                                                               |
+| [mime_rules](#plugins_file_one_mime_rules) | object  | Map MIME type patterns to preview types. Supports glob patterns (e.g., 'text/\*' matches 'text/plain', 'text/html', etc.). Valid preview types: text, image, pdf, archive, folder, remime.<br />-&gt; Use 'remime' if you want a more accurate description from file(1) |
 
 #### <a name="plugins_file_one_enabled"></a>8.6.1. Property `Rovr Config > plugins > file_one > enabled`
 
@@ -4039,7 +4039,8 @@ Must be one of:
 | **Additional properties** | [Each additional property must conform to the schema](#plugins_file_one_mime_rules_additionalProperties)                                                                                                                                                                                                                                |
 | **Default**               | `{"text/*": "text", "image/*": "image", "application/pdf": "pdf", "application/zip": "archive", "application/x-tar": "archive", "application/gzip": "archive", "application/x-bzip2": "archive", "application/x-xz": "archive", "application/x-rar": "archive", "application/x-7z-compressed": "archive", "inode/directory": "folder"}` |
 
-**Description:** Map MIME type patterns to preview types. Supports glob patterns (e.g., 'text/\*' matches 'text/plain', 'text/html', etc.). Valid preview types: text, image, pdf, archive, folder.
+**Description:** Map MIME type patterns to preview types. Supports glob patterns (e.g., 'text/\*' matches 'text/plain', 'text/html', etc.). Valid preview types: text, image, pdf, archive, folder, remime.
+-&gt; Use 'remime' if you want a more accurate description from file(1)
 
 | Property                                              | Type             | Title/Description |
 | ----------------------------------------------------- | ---------------- | ----------------- |
@@ -4059,6 +4060,7 @@ Must be one of:
 - "pdf"
 - "archive"
 - "folder"
+- "remime"
 
 ## <a name="mode"></a>9. Property `Rovr Config > mode`
 
